src/objects/Mentor__c.object
<CustomObject>
    <description>This custom object is used to support the AMA tool, and for showing who is assigned to student mentors (students)</description>
    <fields>
        <fullName>AssignedCollege__c</fullName>
        <description>This is the assigned college for the mentor</description>
        <inlineHelpText>Please enter the assigned college that this mentor can support for students.</inlineHelpText>
        <label>Assigned College</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapStone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AvailableSpots__c</fullName>
        <formula>MaxStudents__c  -  CurrentStudents__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AvailableSpots</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to determine if a mentor is available for accepting new students.</description>
        <inlineHelpText>If checked, this mentor can receive students.</inlineHelpText>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BannerId__c</fullName>
        <description>This is the banner ID for a Mentor</description>
        <inlineHelpText>Please enter the banner id for this mentor</inlineHelpText>
        <label>Banner Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CanSelectOtherMentorsinMyStudents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected as true for the given mentor, the mentor is able to select other mentors from the dropdown box in the MyStudents page.</description>
        <label>Can Select Other Mentors in MyStudents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentStudents__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For Course Mentor Only: how many current Student this course mentor are helping with.

Can not exceed the maxstudents__c</description>
        <label>Current Students</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discipline__c</fullName>
        <description>Indicates the mentor&apos;s discipline.</description>
        <label>Discipline</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capstone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <description>The date that this employee started WGU</description>
        <inlineHelpText>WGU starting date</inlineHelpText>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Input_Program_Codes__c</fullName>
        <label>Input Program Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxStudents__c</fullName>
        <defaultValue>100</defaultValue>
        <description>For Course Mentor Only: max number of students this mentor can handle.</description>
        <label>Max Students</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MentorCeiling__c</fullName>
        <description>Actual amount assigned in a month. Decremented during Auto Mentor Assignment.</description>
        <label>Monthly Remaining (Balance)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MentorDate__c</fullName>
        <description>Date that indicates when the mentor starts in the Mentoring department, also referred to as MDATE.</description>
        <label>Mentor Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MentorRole__c</fullName>
        <description>The mentors can have a specific role assigned, to help with the automatic mentor assignments.</description>
        <inlineHelpText>Please specify a role if this mentor can help 
    At risk students
    Starter Students
    Concentrated 

Of if this mentor is a program manager.</inlineHelpText>
        <label>Mentor Role</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Provost Mentoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapStone Evaluator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capstone Facilitator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capstone Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Mentor Cohort Facilitator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Mentor Project Facilitator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Mentor Technology Facilitator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEPTCHG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Mentoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduation Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separated From University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Mentor (Team Lead)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mentor_Manager__c</fullName>
        <description>The manager (text field lastname , firstname) will eventually want to move this to a user lookup.</description>
        <inlineHelpText>Manager</inlineHelpText>
        <label>Manager</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyAssigned__c</fullName>
        <formula>MonthlyProjection__c -  MentorCeiling__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MonthlyProjection__c</fullName>
        <label>Monthly Projection</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficeHours__c</fullName>
        <description>Field to hold mentor office hours in a JSON format.</description>
        <inlineHelpText>Field to hold mentor office hours in a JSON format.</inlineHelpText>
        <label>Office Hours</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PIDM__c</fullName>
        <description>The mentor pidm so we can use external id&apos;s</description>
        <externalId>true</externalId>
        <inlineHelpText>The WGU PIDM assigned to this mentor.</inlineHelpText>
        <label>PIDM</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Priority1ProgramCodes__c</fullName>
        <label>Priority 1 Program Codes</label>
        <picklist>
            <picklistValues>
                <fullName>BAECE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAISK8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAMA12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAMA9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASC9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASCB12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASCCH12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASCG12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASCPH12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASS12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSBUHR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSBUITM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSITDB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSITND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSITNW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSITSEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSITSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSMK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSNU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSPRN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSRN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENDEDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENDELL</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ProgramCodes__c</fullName>
        <description>The program codes that this mentor can work with students who have that program.</description>
        <inlineHelpText>Enter the programs codes that this mentor is allowed to be assigned students from.</inlineHelpText>
        <label>Program Codes</label>
        <picklist>
            <picklistValues>
                <fullName>AAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AASITCNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AASITNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAECE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAESB12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAESCH12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAESG12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAESMA12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAESMA9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAESPH12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAESSC9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAESSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAISK8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAISPK8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAMA12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAMA9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASC9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASCB12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASCCH12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASCG12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASCPH12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASPNV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASS12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASSPX12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSBUHR</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RemainingStudents__c</fullName>
        <description>This is the remaining number of students that can be assigned to this student, it is a formula based on the capacity minus the current number of assigned students.</description>
        <formula>StudentCapacity__c  -  StudentsAssigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The remaining number of students that can be assigned.</inlineHelpText>
        <label>Remaining Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOSLPriorityPrograms__c</fullName>
        <label>SOSL Priority Programs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentCapacity__c</fullName>
        <description>The number of students that this mentor can handle</description>
        <inlineHelpText>THe number of students that this mentor can be assigned to.</inlineHelpText>
        <label>Student Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StudentsAssigned__c</fullName>
        <description>The current number of students assigned to this mentor</description>
        <inlineHelpText>The number of students that are currently assigned to this mentor.</inlineHelpText>
        <label>Students Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TeamSpecialty__c</fullName>
        <inlineHelpText>When specialty does this Mentor play within their team?</inlineHelpText>
        <label>Team Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Cohort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>UserState__c</fullName>
        <formula>User__r.State</formula>
        <label>User:State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User with a mentor role for this record</description>
        <inlineHelpText>The user that has these attributes</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Student_Mentors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mentor</label>
    <listViews>
        <fullName>AllMentors</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>AssignedCollege__c</columns>
        <columns>MentorRole__c</columns>
        <columns>MaxStudents__c</columns>
        <columns>CurrentStudents__c</columns>
        <columns>MonthlyAssigned__c</columns>
        <columns>PIDM__c</columns>
        <columns>StudentsAssigned__c</columns>
        <columns>StudentCapacity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Mentors</label>
        <sharedTo>
            <group>MentorManagers</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DataCleanupNoCollege</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>AssignedCollege__c</columns>
        <columns>MentorRole__c</columns>
        <columns>Mentor_Manager__c</columns>
        <columns>CanSelectOtherMentorsinMyStudents__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AssignedCollege__c</field>
            <operation>equals</operation>
        </filters>
        <label>Data Cleanup - No College</label>
        <sharedTo>
            <group>MentorManagers</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DataCleanupNoRole</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>AssignedCollege__c</columns>
        <columns>MentorRole__c</columns>
        <columns>Mentor_Manager__c</columns>
        <columns>CanSelectOtherMentorsinMyStudents__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MentorRole__c</field>
            <operation>equals</operation>
        </filters>
        <label>Data Cleanup - No Role</label>
        <sharedTo>
            <group>MentorManagers</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mentor_Assignment_List</fullName>
        <columns>NAME</columns>
        <columns>Available__c</columns>
        <columns>MentorCeiling__c</columns>
        <columns>StudentCapacity__c</columns>
        <columns>StudentsAssigned__c</columns>
        <columns>RemainingStudents__c</columns>
        <columns>MentorRole__c</columns>
        <columns>ProgramCodes__c</columns>
        <columns>AssignedCollege__c</columns>
        <filterScope>Everything</filterScope>
        <label>Mentor Assignment List</label>
    </listViews>
    <listViews>
        <fullName>Mentoring_IT</fullName>
        <columns>NAME</columns>
        <columns>PIDM__c</columns>
        <columns>User__c</columns>
        <columns>AssignedCollege__c</columns>
        <columns>MentorRole__c</columns>
        <columns>Hire_Date__c</columns>
        <columns>MonthlyProjection__c</columns>
        <columns>MonthlyAssigned__c</columns>
        <columns>MentorCeiling__c</columns>
        <columns>Available__c</columns>
        <columns>Priority1ProgramCodes__c</columns>
        <columns>ProgramCodes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hire_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2012</value>
        </filters>
        <label>Mentoring (New Hires)</label>
        <sharedTo>
            <role>MentorsProgramManagement</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mentoring_Sec_Ed</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>PIDM__c</columns>
        <columns>User__c</columns>
        <columns>AssignedCollege__c</columns>
        <columns>MentorRole__c</columns>
        <columns>MonthlyProjection__c</columns>
        <columns>MonthlyAssigned__c</columns>
        <columns>MentorCeiling__c</columns>
        <columns>Available__c</columns>
        <columns>Priority1ProgramCodes__c</columns>
        <columns>ProgramCodes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AssignedCollege__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <filters>
            <field>AssignedCollege__c</field>
            <operation>equals</operation>
            <value>Information Technology</value>
        </filters>
        <label>Mentoring (IT)</label>
        <sharedTo>
            <role>MentorsProgramManagement</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Student_Mentors</fullName>
        <columns>NAME</columns>
        <columns>MonthlyProjection__c</columns>
        <columns>MentorCeiling__c</columns>
        <columns>AssignedCollege__c</columns>
        <columns>ProgramCodes__c</columns>
        <columns>StudentsAssigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MentorRole__c</field>
            <operation>equals</operation>
            <value>Student Mentor,Student Mentor (Concentrated),Student Mentor (Starter)</value>
        </filters>
        <label>Student Mentors</label>
    </listViews>
    <nameField>
        <label>Mentor Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mentors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>